# nodus-community

./: .gitignore  MIGRATION_PLAN.md  README.md
nodus-community/: README.md  package-lock.json  package.json  vite.config.js  vitest.config.js
nodus-community/.github/workflows/: ci.yml
nodus-community/archive/: GridConfig.js  GridLayout.js
nodus-community/archive/components/: GridBlock.js  GridCell.js  GridTabs.js
nodus-community/archive/convert-later/: BuildingBlockRenderer.js  PerformanceOverlayBlock.js  README.md  SystemToastManager.js
nodus-community/src/: index.html  main.js
nodus-community/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
nodus-community/src-tauri/grid-engine-wasm/: Cargo.toml
nodus-community/src-tauri/grid-engine-wasm/src/: lib.rs
nodus-community/src-tauri/nodus-engine/: Cargo.toml
nodus-community/src-tauri/nodus-engine/src/: action_dispatcher.rs  async_orchestrator.rs  commands.rs  commands_async.rs  commands_grid.rs  commands_plugin.rs  lib.rs  license_mod.rs  main.rs  state_mod.rs  universal_plugin_system.rs
nodus-community/src-tauri/nodus-engine/src/core-migrations/: nodus.sqlite
nodus-community/src-tauri/nodus-engine/src/storage/: indexeddb_adapter.rs  mod.rs  sqlite_adapter.rs  storage_mod.rs  sync_mod.rs  validation_mod.rs
nodus-community/src-tauri/nodus-engine/tests/: commands_grid_tests.rs  regression_action_dispatch.rs  sqlite_adapter_integration.rs  sqlite_adapter_tests.rs
nodus-community/src-tauri/src/: main.rs
nodus-community/src/app/: main.js
nodus-community/src/features/: DeveloperDashboard.js  GridMigrationExample.js
nodus-community/src/features/grid/: CompleteGridSystem.js  GridBootstrap.js  GridHistoryInspector.js  GridToastManager.js
nodus-community/src/features/grid/policies/: GridPolicyIntegration.js
nodus-community/src/features/security/: SecurityExplainer.js
nodus-community/src/features/ui/: BuildingBlockRenderer.js  ComponentToolbox.js  PolicyControlBlock_Enhanced.js  SafeDOM.js  VirtualList.js  atomic-base.css
nodus-community/src/features/ui/runtime/: RenderContext.js
nodus-community/src/platform/: ActionDispatcher.js  AsyncOrchestrator.js
nodus-community/src/platform/actions/: ActionDispatcher.js
nodus-community/src/platform/grid/: CompleteGridSystem.js  EnhancedGridRenderer.js  Grid.css  Grid.js  GridBootstrap.js  GridEnhancementIntegration.js  GridRuntimeConfig.js  GridToastManager.js  grid-compat-test.js  index.js
nodus-community/src/platform/grid/components/: GridBlock.js  GridTab.js
nodus-community/src/platform/grid/utils/: GRID_CONFIG_ARCHITECTURE.md  GridConfig.js  GridConfigSystem.js  GridHistoryInspector.js  GridLayout.js  grid-layout-worker.js
nodus-community/src/platform/state/: HybridStateManager.js  StateUIBridge.js
nodus-community/src/platform/storage/: indexeddb.js
nodus-community/src/platform/ui/: AtomicElements.js  ComponentSystem.js
nodus-community/src/platform/ui/components/: CommandBar.js  GridConfigPanel.js  SystemToast.js  VirtualList.js
nodus-community/src/shared/: AsyncOrchestrationService.js  AsyncOrchestrator.js
nodus-community/test/: actionDispatcher.spec.js
src-tauri/: tauri.conf.json
src-tauri/nodus-engine/src/: action_dispatcher.rs  async_orchestrator.rs  commands_mod.rs  fixed_state_mod.rs
src-tauri/nodus-engine/src/storage/: storage_mod.rs  sync_mod.rs
src-tauri/src/: lib.rs  main.rs
src/app/: environment.config.js  main.js
src/features/: global-search-bar.js
src/features/grid/: AILayoutAssistant.js  EnhancedGridRenderer.js  GridBootstrap.css  GridEnhancementIntegration.js  NestedGridManager.js
src/features/grid/runtime/: ComponentRegistry.js  GridRuntimeConfig.js  LayoutStore.js
src/features/security/: PolicyControlBlockEnhanced.js
src/features/ui/: AtomicRegistry.js  BindEngine.js  SystemToastManager.js
src/features/ui/runtime/: AdaptiveRenderer.js  ComponentDefinition.js
src/platform/actions/: ActionHandlerRegistry.js  AutomaticActionInstrumentation.js
src/platform/state/: EventFlowEngine.js  QueryService.js
