[package]
name = "grid-engine-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # cdylib is essential for WASM

[dependencies]
# The bridge between Rust and JavaScript
wasm-bindgen = "0.2.87"

# For passing JSON structs between Rust and JS
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"

# For using `console.log` from Rust
web-sys = { version = "0.3.64", features = ["console"] }

# For fast HashSet lookups
fnv = { version = "1.0.7", default-features = false }